--- a/index.html
+++ b/index.html
@@ -6,24 +6,42 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<!-- Home Screen -->
 <div id="homeScreen" class="screen">
   <h1>Circle Runner</h1>
   <button id="playBtn">Play</button>
   <button id="shopBtn">Shop</button>
   <button id="settingsBtn">Settings</button>
+  <div id="pointsDisplay">Points: 0</div>
 </div>
 
+<!-- Level Select Screen -->
+<div id="levelScreen" class="screen hidden">
+  <h2>Select Level</h2>
+  <div id="levelButtons"></div>
+  <button id="backHomeFromLevel">Back</button>
+</div>
+
+<!-- Shop Screen -->
 <div id="shopScreen" class="screen hidden">
   <h2>Shop</h2>
-  <div class="themeOption" data-theme="theme1">Light Blue & Black</div>
-  <div class="themeOption" data-theme="theme2">Light Green & Black</div>
-  <div class="themeOption" data-theme="theme3">Black & White</div>
+  <div id="shopThemes"></div>
   <button id="backShop">Back</button>
 </div>
 
+<!-- Settings Screen -->
+<div id="settingsScreen" class="screen hidden">
+  <h2>Settings</h2>
+  <div id="settingsThemes"></div>
+  <button id="backSettings">Back</button>
+</div>
+
+<!-- Game Screen -->
 <div id="gameScreen" class="screen hidden">
   <canvas id="gameCanvas" width="600" height="400"></canvas>
-  <button id="backHome">Back</button>
+  <div id="gamePoints">Points Earned: 0</div>
+  <button id="backHomeFromGame">Back</button>
 </div>
 
 <script src="game.js"></script>
